@@ -11,10 +11,12 @@
 
 1.9.1 (2011-09-??) 
  ! Opening settings dialog: ClassCastException on Linux/OpenJDK
- ! Custom atlas as map source fixed for atlas formats AndNav, BackCountry 
-    Navigator and Osmand
+ ! Custom SQlite atlas as map source fixed for atlas formats AndNav, 
+    BackCountry Navigator and Osmand 
  + Background color for BeanShell map sources can be specified by adding
     backgroundColor = "#ffffff"; 
+ ! Custom SQLite atlas as map source had an undefined tileImageType;
+    Added auto-detection and user defined <tileImageType> 
 
 1.9 (2011-08-18) 
  ! Calculation problem in MGMaps atlas format (fix by Pierre-Luc Paour)
